--- a/programming-c++/classes/can-message/CMakeLists.txt
+++ b/programming-c++/classes/can-message/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(book-test LANGUAGES CXX)
+project(classes-can-message LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
