--- a/configuration-management/testing/googletest/test-fixture/CMakeLists.txt
+++ b/configuration-management/testing/googletest/test-fixture/CMakeLists.txt
@@ -5,6 +5,7 @@ project(test-fixture LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(test test.cpp)
+find_package(GTest REQUIRED)
 
-target_link_libraries(test PRIVATE gtest gtest_main pthread)
+add_executable(test test.cpp)
+target_link_libraries(test PRIVATE GTest::GTest GTest::Main pthread)
