--- a/programming-c++/oop/copy-constructor/order-exercise/CMakeLists.txt
+++ b/programming-c++/oop/copy-constructor/order-exercise/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(copy-constructor-order LANGUAGES CXX)
+project(order LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Enable compiler warnings globally, activate debugging, and check for gtest
+add_compile_options(-Wall -Wextra -Wpedantic)
+set(CMAKE_BUILD_TYPE Debug)
+find_package(GTest REQUIRED)
 
 include_directories(./)
 add_executable(test test.cpp product.cpp line.cpp order.cpp)
