Added debug information to examples.

--- a/programming-c++/stl/container/vector/vector-test/CMakeLists.txt
+++ b/programming-c++/stl/container/vector/vector-test/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.25)
 
 project(vector-test LANGUAGES CXX)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Enable compiler warnings globally, activate debugging, and check for gtest
+add_compile_options(-Wall -Wextra -Wpedantic)
+set(CMAKE_BUILD_TYPE Debug)
 find_package(GTest REQUIRED)
 
 add_executable(test test.cpp)
