--- a/programming-c++/oop/classes/resistor-exercise/CMakeLists.txt
+++ b/programming-c++/oop/classes/resistor-exercise/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(classes-resistor LANGUAGES CXX)
+project(resistor LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
