--- a/programming-c++/oop/classes/user-mail-directed/CMakeLists.txt
+++ b/programming-c++/oop/classes/user-mail-directed/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(user LANGUAGES CXX)
+project(user-mail-directed LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
