--- a/programming-c++/oop/exceptions/controller/CMakeLists.txt
+++ b/programming-c++/oop/exceptions/controller/CMakeLists.txt
@@ -5,6 +5,11 @@ project(controller LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Enable compiler warnings globally, activate debugging, and check for gtest
+add_compile_options(-Wall -Wextra -Wpedantic)
+set(CMAKE_BUILD_TYPE Debug)
+find_package(GTest REQUIRED)
+
 include_directories(./)
 add_executable(test test.cpp GPIO.cpp controller.cpp)
 
