--- a/design-patterns/creational/replace-constructor/complex/CMakeLists.txt
+++ b/design-patterns/creational/replace-constructor/complex/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(classes-book LANGUAGES CXX)
+project(complex LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -10,6 +10,6 @@ add_compile_options(-Wall -Wextra -Wpedantic)
 set(CMAKE_BUILD_TYPE Debug)
 find_package(GTest REQUIRED)
 
-add_executable(test test.cpp book.cpp)
+add_executable(test test.cpp complex.cpp)
 
 target_link_libraries(test PRIVATE gtest gtest_main pthread)
