--- a/design-patterns/creational/factory-method/list-serializer/src/CMakeLists.txt
+++ b/design-patterns/creational/factory-method/list-serializer/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 # Create a library 
-add_library(serializer STATIC factory_impl.cpp list_serializer_json.cpp list_serializer_xml.cpp) 
+add_library(serializer STATIC serializer_factory_impl.cpp list_serializer_json.cpp list_serializer_xml.cpp) 
