Refactoring State example.

--- a/design-patterns/behavioral/state/light-bulb/src/CMakeLists.txt
+++ b/design-patterns/behavioral/state/light-bulb/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 # Create a library 
-add_library(light_bulb STATIC light_bulb_off.cpp light_bulb_on.cpp light_bulb.cpp) 
+add_library(light_bulb STATIC state_off.cpp state_on.cpp light_bulb.cpp) 
