Refactoring: Renamed example.

--- a/design-patterns/behavioral/state/sm-led/test/CMakeLists.txt
+++ b/design-patterns/behavioral/state/sm-led/test/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_executable(test test.cpp)
 
 # Link libraries to the test executable
-target_link_libraries(test PRIVATE light_bulb gtest gtest_main pthread)
+target_link_libraries(test PRIVATE led gtest gtest_main pthread)
